--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,9 @@ matplotlib==3.6.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
+mkl-fft==1.3.1
+mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
+mkl-service==2.4.0
 nbclassic==0.5.1
 nbclient==0.7.2
 nbconvert==7.2.9
@@ -118,7 +121,7 @@ scipy==1.10.0
 seaborn==0.12.2
 semver==2.13.0
 Send2Trash==1.8.0
-six==1.16.0
+six @ file:///tmp/build/80754af9/six_1644875935023/work
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
