--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,8 @@ notebook==6.5.2
 notebook_shim==0.2.2
 numpy==1.24.2
 oauthlib==3.2.2
+opencv-contrib-python==4.7.0.68
+opencv-contrib-python-headless==4.7.0.68
 opencv-python==4.7.0.68
 opt-einsum==3.3.0
 packaging==23.0
